@@ -6,6 +6,8 @@ git-annex (10.20250606) UNRELEASED; urgency=medium
     filesystems like VFAT that don't support such filenames.
   * webapp: Rename "Upgrade Repository" to "Convert Repository"
     to avoid confusion with git-annex upgrade.
+  * Work around git 2.50 bug that caused it to crash when there is a merge
+    conflict with an unlocked annexed file.
 
  -- Joey Hess <id@joeyh.name>  Mon, 23 Jun 2025 11:11:29 -0400
 
